update budget project

--- a/Sass/_works.scss
+++ b/Sass/_works.scss
@@ -87,8 +87,8 @@
 		background-color: #cbf1f5;
 	}
 }
-/* ----- guessGame ----- */
-.guessGame {
+/* ----- budget ----- */
+.budget {
 	background-color: #cbf1f5;
 	height: 100vh;
 	.workStyle1 {
