--- a/Css/style.css
+++ b/Css/style.css
@@ -67,7 +67,7 @@
   top: -9%;
   left: -50%;
 }
-#work h1 {
+#work #workHeading {
   font-size: 60px;
   color: #fabc60;
   transition: all 1s;
@@ -109,9 +109,52 @@
 #work article a#viewOnGithub:hover {
   letter-spacing: 5px;
 }
-#work article figure img {
+#work article .figure img {
   width: 100%;
 }
+#work .restOfWorks {
+  padding: 10% 5%;
+  background-color: #cbf1f5;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  position: relative;
+}
+#work .restOfWorks h1 {
+  color: #2b2b28;
+  font-size: 35px;
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+#work .restOfWorks figure {
+  width: 35%;
+}
+#work .restOfWorks figure img {
+  box-shadow: 0px 0px 10px #ccc;
+  width: 100%;
+  height: 280px;
+}
+#work .restOfWorks figure figcaption p {
+  color: #2b2b28;
+  margin: 7px;
+}
+#work .restOfWorks figure figcaption a {
+  text-decoration: none;
+  color: #2b2b28;
+  font-size: 13px;
+  border-bottom: 2px solid #2b2b28;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+#work .restOfWorks figure figcaption a:hover {
+  letter-spacing: 3px;
+}
+
 /* ----- Olav ----- */
 .olav {
   background-color: #a6e3e9;
@@ -149,15 +192,14 @@
 }
 
 /* Class */
-#work article figure {
+#work article .figure {
   height: 50vh;
   margin: 5% 0 0;
   width: 40%;
   display: flex;
   position: relative;
   transition: transform 0.5s;
-  box-shadow: 0px 0px 20px #ccc;
-  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0px 0px 10px #ccc;
   align-self: flex-start;
   z-index: 2;
 }
@@ -212,7 +254,7 @@
     margin-top: 10%;
   }
 
-  #work article figure {
+  #work article .figure {
     margin: 5% auto;
     width: 60%;
     height: 30vh;
