--- a/Sass/_works.scss
+++ b/Sass/_works.scss
@@ -11,7 +11,7 @@
 		top: -9%;
 		left: -50%;
 	}
-	h1 {
+	#workHeading {
 		font-size: 60px;
 		color: #fabc60;
 		transition: all 1s;
@@ -52,7 +52,7 @@
 				letter-spacing: 5px;
 			}
 		}
-		figure {
+		.figure {
 			@extend %figureStyle;
 			img {
 				width: 100%;
@@ -60,6 +60,50 @@
 		}
 		p {
 			@extend %paragraphStyle;
+		}
+	}
+	.restOfWorks {
+		padding: 10% 5%;
+		background-color: #cbf1f5;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		flex-wrap: wrap;
+		text-align: center;
+		font-family: 'Raleway', sans-serif;
+		position: relative;
+		h1 {
+			color: #2b2b28;
+			font-size: 35px;
+			position: absolute;
+			top: 5%;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+		figure {
+			width: 35%;
+			img {
+				box-shadow: 0px 0px 10px #ccc;
+				width: 100%;
+				height: 280px;
+			}
+			figcaption {
+				p {
+					color: #2b2b28;
+					margin: 7px;
+				}
+				a {
+					text-decoration: none;
+					color: #2b2b28;
+					font-size: 13px;
+					border-bottom: 2px solid #2b2b28;
+					transition: all .5s;
+					cursor: pointer;
+					&:hover {
+						letter-spacing: 3px;
+					}
+				}
+			}
 		}
 	}
 }
@@ -103,8 +147,7 @@
 	display: flex;
 	position: relative;
 	transition: transform .5s;
-	box-shadow: 0px 0px 20px #ccc;
-	border-radius: 10px 10px 10px 10px;
+	box-shadow: 0px 0px 10px #ccc;
 	align-self: flex-start;
 	z-index: 2;
 }
